--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -4,6 +4,7 @@ html {
 }
 body {
 	padding-top: 56px;
+	padding-bottom: 3rem;
 }
 
 /* Bootstrap custom sizes */
@@ -48,4 +49,13 @@ body {
 }
 .toggle.ios .toggle-handle {
 	border-radius: 20rem;
+}
+
+/* Back to the top button */
+#back_to_the_top {
+    cursor: pointer;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display:none;
 }
